// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications/ApplicationList Applications smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-6 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Applications
      </h1>
    </div>
  </div>
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-label="add"
              data-testid="modal-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge stable-makeStyles-root-7 css-uks7c6-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="AddIcon"
        >
          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <ul class="MuiList-root MuiList-padding stable-makeStyles-root-5 css-b7dj7n-MuiList-root">
    <li class="MuiListItem-root MuiListItem-padding MuiListItem-divider stable-makeStyles-divider-10 stable-makeStyles-root-8 css-7y9j02-MuiListItem-root"
        data-testid="list-item"
    >
      <div class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root">
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-gridHeader-11 css-1xzqqmo-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-8wqwjn-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <h2 class="MuiTypography-root MuiTypography-h2 css-wqt949-MuiTypography-root">
                  <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-mainLink-13 css-1tr280c-MuiTypography-root-MuiLink-root"
                     href="/apps/FFFF-AAAA-CCCC-EEEE"
                  >
                    ABC
                  </a>
                </h2>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <div class="MuiBox-root css-1yq8yj7">
                  <p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap stable-makeStyles-idLabel-16 css-10i0fr3-MuiTypography-root"
                     arial-label="group-id"
                  >
                    xxx-xxx-yyy
                  </p>
                </div>
                <div class="MuiBox-root css-1yuhvjn">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-descriptionLabel-15 css-12h6qye-MuiTypography-root">
                    App Item Description
                  </span>
                </div>
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
              <div>
                <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-geyil9-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                        aria-controls="simple-menu-1"
                        aria-haspopup="true"
                        aria-label="Open menu"
                        data-testid="more-menu-open-button"
                >
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="MoreVertIcon"
                  >
                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
                    </path>
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <hr class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light stable-makeStyles-innerDivider-17 css-cwcxuo-MuiDivider-root">
        </div>
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-itemSection-9 css-11lq3yg-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root">
              <div class="MuiBox-root css-1yuhvjn">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-14 css-12h6qye-MuiTypography-root">
                  INSTANCES
                </span>
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-18 stable-makeStyles-label-22 css-12h6qye-MuiTypography-root">
                  <h5 class="MuiTypography-root MuiTypography-h5 css-optum0-MuiTypography-root">
                    20
                  </h5>
                  <div class="MuiBox-root css-1jzjbfr">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-3nihpm-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ScheduleIcon"
                    >
                      <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                      </path>
                      <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                      </path>
                    </svg>
                    <div class="MuiBox-root css-1hsc5oo">
                      <h6 class="MuiTypography-root MuiTypography-subtitle1 css-ek5zvm-MuiTypography-root">
                        last 24 hours
                      </h6>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div class="MuiBox-root css-1pelcm7">
              <div class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-aif5q5-MuiDivider-root"
                   role="separator"
                   aria-orientation="vertical"
              >
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root">
              <div class="MuiBox-root css-10wfmn8">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-14 css-12h6qye-MuiTypography-root">
                  Groups
                </span>
                <div class="MuiBox-root css-1t04ftt">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-18 stable-makeStyles-label-24 css-12h6qye-MuiTypography-root">
                    1
                  </span>
                </div>
                <div class="MuiBox-root css-164r41r">
                  <div class="MuiBox-root css-1ckupud">
                    <div class="MuiBox-root css-126n10b">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-25 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1"
                      >
                        First group
                      </a>
                    </div>
                    <div class="MuiBox-root css-qiye2o">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-instanceLink-26 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1/instances?period=1d"
                      >
                        <div class="MuiBox-root css-k008qs">
                          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                               focusable="false"
                               aria-hidden="true"
                               viewbox="0 0 24 24"
                               data-testid="LayersOutlinedIcon"
                          >
                            <path d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z">
                            </path>
                          </svg>
                          <div class="MuiBox-root css-7ieh0i">
                            20
                          </div>
                          instances
                        </div>
                      </a>
                    </div>
                  </div>
                  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-cfd5wn-MuiListItem-root">
                    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-11nsb57-MuiGrid-root">
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-28 stable-makeStyles-colorAvatar-29 css-jmdkhx-MuiAvatar-root">
                        </div>
                      </div>
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiListItemText-root MuiListItemText-multiline stable-makeStyles-root-27 css-14ln1j6-MuiListItemText-root">
                          <div class="MuiBox-root css-70qvj9">
                            <div class="MuiBox-root css-1xsd608">
                              main
                            </div>
                          </div>
                          <div class="MuiBox-root css-15aqakd">
                            <div class="MuiBox-root css-0">
                              1.11.3 (ALL)
                            </div>
                            <div class="MuiBox-root css-n085mf">
                              <div class="MuiBox-root css-k008qs">
                                <div class="MuiBox-root css-0">
                                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                                       focusable="false"
                                       aria-hidden="true"
                                       viewbox="0 0 24 24"
                                       data-testid="ScheduleIcon"
                                       aria-label="Release date"
                                       data-mui-internal-clone-element="true"
                                  >
                                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                                    </path>
                                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                                    </path>
                                  </svg>
                                </div>
                                <div class="MuiBox-root css-1iuj5ih">
                                  07/18/2019
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="MuiListItem-root MuiListItem-padding MuiListItem-divider stable-makeStyles-divider-10 stable-makeStyles-root-8 css-7y9j02-MuiListItem-root"
        data-testid="list-item"
    >
      <div class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root">
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-gridHeader-11 css-1xzqqmo-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-8wqwjn-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <h2 class="MuiTypography-root MuiTypography-h2 css-wqt949-MuiTypography-root">
                  <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-mainLink-13 css-1tr280c-MuiTypography-root-MuiLink-root"
                     href="/apps/BBBB-AAAA-CCCC-EEEE"
                  >
                    ABC 2 the return
                  </a>
                </h2>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <div class="MuiBox-root css-1yq8yj7">
                  <p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap stable-makeStyles-idLabel-16 css-10i0fr3-MuiTypography-root"
                     arial-label="group-id"
                  >
                    xxx-xxx-yyy
                  </p>
                </div>
                <div class="MuiBox-root css-1yuhvjn">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-descriptionLabel-15 css-12h6qye-MuiTypography-root">
                    App Item Description
                  </span>
                </div>
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
              <div>
                <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-geyil9-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                        aria-controls="simple-menu-2"
                        aria-haspopup="true"
                        aria-label="Open menu"
                        data-testid="more-menu-open-button"
                >
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="MoreVertIcon"
                  >
                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
                    </path>
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <hr class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light stable-makeStyles-innerDivider-17 css-cwcxuo-MuiDivider-root">
        </div>
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-itemSection-9 css-11lq3yg-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root">
              <div class="MuiBox-root css-1yuhvjn">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-14 css-12h6qye-MuiTypography-root">
                  INSTANCES
                </span>
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-18 stable-makeStyles-label-33 css-12h6qye-MuiTypography-root">
                  <h5 class="MuiTypography-root MuiTypography-h5 css-optum0-MuiTypography-root">
                    20
                  </h5>
                  <div class="MuiBox-root css-1jzjbfr">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-3nihpm-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ScheduleIcon"
                    >
                      <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                      </path>
                      <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                      </path>
                    </svg>
                    <div class="MuiBox-root css-1hsc5oo">
                      <h6 class="MuiTypography-root MuiTypography-subtitle1 css-ek5zvm-MuiTypography-root">
                        last 24 hours
                      </h6>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div class="MuiBox-root css-1pelcm7">
              <div class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-aif5q5-MuiDivider-root"
                   role="separator"
                   aria-orientation="vertical"
              >
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root">
              <div class="MuiBox-root css-10wfmn8">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-14 css-12h6qye-MuiTypography-root">
                  Groups
                </span>
                <div class="MuiBox-root css-1t04ftt">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-18 stable-makeStyles-label-35 css-12h6qye-MuiTypography-root">
                    1
                  </span>
                </div>
                <div class="MuiBox-root css-164r41r">
                  <div class="MuiBox-root css-1ckupud">
                    <div class="MuiBox-root css-126n10b">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-25 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1"
                      >
                        First group
                      </a>
                    </div>
                    <div class="MuiBox-root css-qiye2o">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-instanceLink-26 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1/instances?period=1d"
                      >
                        <div class="MuiBox-root css-k008qs">
                          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                               focusable="false"
                               aria-hidden="true"
                               viewbox="0 0 24 24"
                               data-testid="LayersOutlinedIcon"
                          >
                            <path d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z">
                            </path>
                          </svg>
                          <div class="MuiBox-root css-7ieh0i">
                            20
                          </div>
                          instances
                        </div>
                      </a>
                    </div>
                  </div>
                  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-cfd5wn-MuiListItem-root">
                    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-11nsb57-MuiGrid-root">
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-28 stable-makeStyles-colorAvatar-36 css-jmdkhx-MuiAvatar-root">
                        </div>
                      </div>
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiListItemText-root MuiListItemText-multiline stable-makeStyles-root-27 css-14ln1j6-MuiListItemText-root">
                          <div class="MuiBox-root css-70qvj9">
                            <div class="MuiBox-root css-1xsd608">
                              main
                            </div>
                          </div>
                          <div class="MuiBox-root css-15aqakd">
                            <div class="MuiBox-root css-0">
                              1.11.3 (ALL)
                            </div>
                            <div class="MuiBox-root css-n085mf">
                              <div class="MuiBox-root css-k008qs">
                                <div class="MuiBox-root css-0">
                                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                                       focusable="false"
                                       aria-hidden="true"
                                       viewbox="0 0 24 24"
                                       data-testid="ScheduleIcon"
                                       aria-label="Release date"
                                       data-mui-internal-clone-element="true"
                                  >
                                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                                    </path>
                                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                                    </path>
                                  </svg>
                                </div>
                                <div class="MuiBox-root css-1iuj5ih">
                                  07/18/2019
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`applications/ApplicationList EditOpen smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-38 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Applications
      </h1>
    </div>
  </div>
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-label="add"
              data-testid="modal-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge stable-makeStyles-root-39 css-uks7c6-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="AddIcon"
        >
          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <ul class="MuiList-root MuiList-padding stable-makeStyles-root-37 css-b7dj7n-MuiList-root">
    <li class="MuiListItem-root MuiListItem-padding MuiListItem-divider stable-makeStyles-divider-42 stable-makeStyles-root-40 css-7y9j02-MuiListItem-root"
        data-testid="list-item"
    >
      <div class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root">
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-gridHeader-43 css-1xzqqmo-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-8wqwjn-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <h2 class="MuiTypography-root MuiTypography-h2 css-wqt949-MuiTypography-root">
                  <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-mainLink-45 css-1tr280c-MuiTypography-root-MuiLink-root"
                     href="/apps/FFFF-AAAA-CCCC-EEEE"
                  >
                    ABC
                  </a>
                </h2>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <div class="MuiBox-root css-1yq8yj7">
                  <p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap stable-makeStyles-idLabel-48 css-10i0fr3-MuiTypography-root"
                     arial-label="group-id"
                  >
                    xxx-xxx-yyy
                  </p>
                </div>
                <div class="MuiBox-root css-1yuhvjn">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-descriptionLabel-47 css-12h6qye-MuiTypography-root">
                    App Item Description
                  </span>
                </div>
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
              <div>
                <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-geyil9-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                        aria-controls="simple-menu-3"
                        aria-haspopup="true"
                        aria-label="Open menu"
                        data-testid="more-menu-open-button"
                >
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="MoreVertIcon"
                  >
                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
                    </path>
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <hr class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light stable-makeStyles-innerDivider-49 css-cwcxuo-MuiDivider-root">
        </div>
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-itemSection-41 css-11lq3yg-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root">
              <div class="MuiBox-root css-1yuhvjn">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-46 css-12h6qye-MuiTypography-root">
                  INSTANCES
                </span>
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-50 stable-makeStyles-label-54 css-12h6qye-MuiTypography-root">
                  <h5 class="MuiTypography-root MuiTypography-h5 css-optum0-MuiTypography-root">
                    20
                  </h5>
                  <div class="MuiBox-root css-1jzjbfr">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-3nihpm-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ScheduleIcon"
                    >
                      <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                      </path>
                      <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                      </path>
                    </svg>
                    <div class="MuiBox-root css-1hsc5oo">
                      <h6 class="MuiTypography-root MuiTypography-subtitle1 css-ek5zvm-MuiTypography-root">
                        last 24 hours
                      </h6>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div class="MuiBox-root css-1pelcm7">
              <div class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-aif5q5-MuiDivider-root"
                   role="separator"
                   aria-orientation="vertical"
              >
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root">
              <div class="MuiBox-root css-10wfmn8">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-46 css-12h6qye-MuiTypography-root">
                  Groups
                </span>
                <div class="MuiBox-root css-1t04ftt">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-50 stable-makeStyles-label-56 css-12h6qye-MuiTypography-root">
                    1
                  </span>
                </div>
                <div class="MuiBox-root css-164r41r">
                  <div class="MuiBox-root css-1ckupud">
                    <div class="MuiBox-root css-126n10b">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-57 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1"
                      >
                        First group
                      </a>
                    </div>
                    <div class="MuiBox-root css-qiye2o">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-instanceLink-58 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1/instances?period=1d"
                      >
                        <div class="MuiBox-root css-k008qs">
                          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                               focusable="false"
                               aria-hidden="true"
                               viewbox="0 0 24 24"
                               data-testid="LayersOutlinedIcon"
                          >
                            <path d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z">
                            </path>
                          </svg>
                          <div class="MuiBox-root css-7ieh0i">
                            20
                          </div>
                          instances
                        </div>
                      </a>
                    </div>
                  </div>
                  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-cfd5wn-MuiListItem-root">
                    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-11nsb57-MuiGrid-root">
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-60 stable-makeStyles-colorAvatar-61 css-jmdkhx-MuiAvatar-root">
                        </div>
                      </div>
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiListItemText-root MuiListItemText-multiline stable-makeStyles-root-59 css-14ln1j6-MuiListItemText-root">
                          <div class="MuiBox-root css-70qvj9">
                            <div class="MuiBox-root css-1xsd608">
                              main
                            </div>
                          </div>
                          <div class="MuiBox-root css-15aqakd">
                            <div class="MuiBox-root css-0">
                              1.11.3 (ALL)
                            </div>
                            <div class="MuiBox-root css-n085mf">
                              <div class="MuiBox-root css-k008qs">
                                <div class="MuiBox-root css-0">
                                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                                       focusable="false"
                                       aria-hidden="true"
                                       viewbox="0 0 24 24"
                                       data-testid="ScheduleIcon"
                                       aria-label="Release date"
                                       data-mui-internal-clone-element="true"
                                  >
                                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                                    </path>
                                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                                    </path>
                                  </svg>
                                </div>
                                <div class="MuiBox-root css-1iuj5ih">
                                  07/18/2019
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li class="MuiListItem-root MuiListItem-padding MuiListItem-divider stable-makeStyles-divider-42 stable-makeStyles-root-40 css-7y9j02-MuiListItem-root"
        data-testid="list-item"
    >
      <div class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root">
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-gridHeader-43 css-1xzqqmo-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-8wqwjn-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <h2 class="MuiTypography-root MuiTypography-h2 css-wqt949-MuiTypography-root">
                  <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-mainLink-45 css-1tr280c-MuiTypography-root-MuiLink-root"
                     href="/apps/BBBB-AAAA-CCCC-EEEE"
                  >
                    ABC 2 the return
                  </a>
                </h2>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <div class="MuiBox-root css-1yq8yj7">
                  <p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap stable-makeStyles-idLabel-48 css-10i0fr3-MuiTypography-root"
                     arial-label="group-id"
                  >
                    xxx-xxx-yyy
                  </p>
                </div>
                <div class="MuiBox-root css-1yuhvjn">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-descriptionLabel-47 css-12h6qye-MuiTypography-root">
                    App Item Description
                  </span>
                </div>
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
              <div>
                <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-geyil9-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                        aria-controls="simple-menu-4"
                        aria-haspopup="true"
                        aria-label="Open menu"
                        data-testid="more-menu-open-button"
                >
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="MoreVertIcon"
                  >
                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
                    </path>
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <hr class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light stable-makeStyles-innerDivider-49 css-cwcxuo-MuiDivider-root">
        </div>
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-itemSection-41 css-11lq3yg-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root">
              <div class="MuiBox-root css-1yuhvjn">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-46 css-12h6qye-MuiTypography-root">
                  INSTANCES
                </span>
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-50 stable-makeStyles-label-65 css-12h6qye-MuiTypography-root">
                  <h5 class="MuiTypography-root MuiTypography-h5 css-optum0-MuiTypography-root">
                    20
                  </h5>
                  <div class="MuiBox-root css-1jzjbfr">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-3nihpm-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ScheduleIcon"
                    >
                      <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                      </path>
                      <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                      </path>
                    </svg>
                    <div class="MuiBox-root css-1hsc5oo">
                      <h6 class="MuiTypography-root MuiTypography-subtitle1 css-ek5zvm-MuiTypography-root">
                        last 24 hours
                      </h6>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div class="MuiBox-root css-1pelcm7">
              <div class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-aif5q5-MuiDivider-root"
                   role="separator"
                   aria-orientation="vertical"
              >
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root">
              <div class="MuiBox-root css-10wfmn8">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-46 css-12h6qye-MuiTypography-root">
                  Groups
                </span>
                <div class="MuiBox-root css-1t04ftt">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-50 stable-makeStyles-label-67 css-12h6qye-MuiTypography-root">
                    1
                  </span>
                </div>
                <div class="MuiBox-root css-164r41r">
                  <div class="MuiBox-root css-1ckupud">
                    <div class="MuiBox-root css-126n10b">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-57 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1"
                      >
                        First group
                      </a>
                    </div>
                    <div class="MuiBox-root css-qiye2o">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-instanceLink-58 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1/instances?period=1d"
                      >
                        <div class="MuiBox-root css-k008qs">
                          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                               focusable="false"
                               aria-hidden="true"
                               viewbox="0 0 24 24"
                               data-testid="LayersOutlinedIcon"
                          >
                            <path d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z">
                            </path>
                          </svg>
                          <div class="MuiBox-root css-7ieh0i">
                            20
                          </div>
                          instances
                        </div>
                      </a>
                    </div>
                  </div>
                  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-cfd5wn-MuiListItem-root">
                    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-11nsb57-MuiGrid-root">
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-60 stable-makeStyles-colorAvatar-68 css-jmdkhx-MuiAvatar-root">
                        </div>
                      </div>
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiListItemText-root MuiListItemText-multiline stable-makeStyles-root-59 css-14ln1j6-MuiListItemText-root">
                          <div class="MuiBox-root css-70qvj9">
                            <div class="MuiBox-root css-1xsd608">
                              main
                            </div>
                          </div>
                          <div class="MuiBox-root css-15aqakd">
                            <div class="MuiBox-root css-0">
                              1.11.3 (ALL)
                            </div>
                            <div class="MuiBox-root css-n085mf">
                              <div class="MuiBox-root css-k008qs">
                                <div class="MuiBox-root css-0">
                                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                                       focusable="false"
                                       aria-hidden="true"
                                       viewbox="0 0 24 24"
                                       data-testid="ScheduleIcon"
                                       aria-label="Release date"
                                       data-mui-internal-clone-element="true"
                                  >
                                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                                    </path>
                                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                                    </path>
                                  </svg>
                                </div>
                                <div class="MuiBox-root css-1iuj5ih">
                                  07/18/2019
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`applications/ApplicationList Loading smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-2 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Applications
      </h1>
    </div>
  </div>
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-label="add"
              data-testid="modal-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge stable-makeStyles-root-3 css-uks7c6-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="AddIcon"
        >
          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <ul class="MuiList-root MuiList-padding stable-makeStyles-root-1 css-b7dj7n-MuiList-root">
    <div class="stable-makeStyles-loaderContainer-4 MuiBox-root css-0"
         data-testid="loader-container"
    >
      <span class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-haxlbp-MuiCircularProgress-root"
            role="progressbar"
            aria-label="Loading"
            style="width: 40px; height: 40px;"
      >
        <svg class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
             viewbox="22 22 44 44"
        >
          <circle class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  r="20.2"
                  fill="none"
                  stroke-width="3.6"
          >
          </circle>
        </svg>
      </span>
    </div>
  </ul>
</div>
`;

exports[`applications/ApplicationList SearchTerm smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-70 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Applications
      </h1>
    </div>
  </div>
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-label="add"
              data-testid="modal-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge stable-makeStyles-root-71 css-uks7c6-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="AddIcon"
        >
          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <ul class="MuiList-root MuiList-padding stable-makeStyles-root-69 css-b7dj7n-MuiList-root">
    <li class="MuiListItem-root MuiListItem-padding MuiListItem-divider stable-makeStyles-divider-74 stable-makeStyles-root-72 css-7y9j02-MuiListItem-root"
        data-testid="list-item"
    >
      <div class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root">
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-gridHeader-75 css-1xzqqmo-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-8wqwjn-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <h2 class="MuiTypography-root MuiTypography-h2 css-wqt949-MuiTypography-root">
                  <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-mainLink-77 css-1tr280c-MuiTypography-root-MuiLink-root"
                     href="/apps/BBBB-AAAA-CCCC-EEEE"
                  >
                    ABC 2 the return
                  </a>
                </h2>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
                <div class="MuiBox-root css-1yq8yj7">
                  <p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap stable-makeStyles-idLabel-80 css-10i0fr3-MuiTypography-root"
                     arial-label="group-id"
                  >
                    xxx-xxx-yyy
                  </p>
                </div>
                <div class="MuiBox-root css-1yuhvjn">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-descriptionLabel-79 css-12h6qye-MuiTypography-root">
                    App Item Description
                  </span>
                </div>
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
              <div>
                <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-geyil9-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        type="button"
                        aria-controls="simple-menu-5"
                        aria-haspopup="true"
                        aria-label="Open menu"
                        data-testid="more-menu-open-button"
                >
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="MoreVertIcon"
                  >
                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
                    </path>
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <hr class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light stable-makeStyles-innerDivider-81 css-cwcxuo-MuiDivider-root">
        </div>
        <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root">
          <div class="MuiGrid-root MuiGrid-container stable-makeStyles-itemSection-73 css-11lq3yg-MuiGrid-root">
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root">
              <div class="MuiBox-root css-1yuhvjn">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-78 css-12h6qye-MuiTypography-root">
                  INSTANCES
                </span>
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-82 stable-makeStyles-label-86 css-12h6qye-MuiTypography-root">
                  <h5 class="MuiTypography-root MuiTypography-h5 css-optum0-MuiTypography-root">
                    20
                  </h5>
                  <div class="MuiBox-root css-1jzjbfr">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-3nihpm-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ScheduleIcon"
                    >
                      <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                      </path>
                      <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                      </path>
                    </svg>
                    <div class="MuiBox-root css-1hsc5oo">
                      <h6 class="MuiTypography-root MuiTypography-subtitle1 css-ek5zvm-MuiTypography-root">
                        last 24 hours
                      </h6>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div class="MuiBox-root css-1pelcm7">
              <div class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-aif5q5-MuiDivider-root"
                   role="separator"
                   aria-orientation="vertical"
              >
              </div>
            </div>
            <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root">
              <div class="MuiBox-root css-10wfmn8">
                <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-featureLabel-78 css-12h6qye-MuiTypography-root">
                  Groups
                </span>
                <div class="MuiBox-root css-1t04ftt">
                  <span class="MuiTypography-root MuiTypography-body1 stable-makeStyles-label-82 stable-makeStyles-label-88 css-12h6qye-MuiTypography-root">
                    1
                  </span>
                </div>
                <div class="MuiBox-root css-164r41r">
                  <div class="MuiBox-root css-1ckupud">
                    <div class="MuiBox-root css-126n10b">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-89 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1"
                      >
                        First group
                      </a>
                    </div>
                    <div class="MuiBox-root css-qiye2o">
                      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-instanceLink-90 css-1tr280c-MuiTypography-root-MuiLink-root"
                         href="/apps//groups/xxx-xxx-1/instances?period=1d"
                      >
                        <div class="MuiBox-root css-k008qs">
                          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                               focusable="false"
                               aria-hidden="true"
                               viewbox="0 0 24 24"
                               data-testid="LayersOutlinedIcon"
                          >
                            <path d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z">
                            </path>
                          </svg>
                          <div class="MuiBox-root css-7ieh0i">
                            20
                          </div>
                          instances
                        </div>
                      </a>
                    </div>
                  </div>
                  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-cfd5wn-MuiListItem-root">
                    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-11nsb57-MuiGrid-root">
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault stable-makeStyles-colorAvatar-92 stable-makeStyles-colorAvatar-93 css-jmdkhx-MuiAvatar-root">
                        </div>
                      </div>
                      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                        <div class="MuiListItemText-root MuiListItemText-multiline stable-makeStyles-root-91 css-14ln1j6-MuiListItemText-root">
                          <div class="MuiBox-root css-70qvj9">
                            <div class="MuiBox-root css-1xsd608">
                              main
                            </div>
                          </div>
                          <div class="MuiBox-root css-15aqakd">
                            <div class="MuiBox-root css-0">
                              1.11.3 (ALL)
                            </div>
                            <div class="MuiBox-root css-n085mf">
                              <div class="MuiBox-root css-k008qs">
                                <div class="MuiBox-root css-0">
                                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                                       focusable="false"
                                       aria-hidden="true"
                                       viewbox="0 0 24 24"
                                       data-testid="ScheduleIcon"
                                       aria-label="Release date"
                                       data-mui-internal-clone-element="true"
                                  >
                                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                                    </path>
                                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                                    </path>
                                  </svg>
                                </div>
                                <div class="MuiBox-root css-1iuj5ih">
                                  07/18/2019
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
